# UETools

./: .envrc  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: Development.md  Notation.md
src/UETools/: __init__.py  __main__.py  default.yaml  framework.py
src/UETools/unreal/: InstallationRegistry.py  UnrealConfiguration.py  UnrealProject.py  __init__.py  install_registry.py  unreal_config.py
src/uetools/: __init__.py  __main__.py  default.yaml  framework.py
src/uetools/core/: __init__.py  uetools_state.py
src/uetools/unreal/: __init__.py  install_registry.py  unreal_config.py  unreal_platform.py
