[project]
name = "uetools"
version = "2026.06.28"
requires-python = ">=3.12"
readme = "README.md"
license = "BSD-3-Clause-Clear"
license-files = ["LICEN[CS]E*"]
description = "Python tools for automating Unreal Engine workflows"

dependencies = [
    "typer ~=0.16.0",
    "click >=8.2.1",
    "rich >=10.11.0",
    "click_shell ~=2.1",
    "yamlpath >=3.8.2",
    "typer_shell >= 1.0.3",
]

[project.scripts]
uetools = "uetools:app"

[project.urls]
Homepage = "https://github.com/sna-scourtney/UETools"
Issues = "https://github.com/sna-scourtney/UETools/issues"
Documentation = "https://github.com/sna-scourtney/UETools/blob/main/docs/"

# Use 'uv sync --group python_console' to also install the interactive
# Python debug console dependencies.
[dependency-groups]
python_console = []
#python_console = ["ipython"]
#dev = ["ipdb >=0.13.13"]

[tool.hatch.build.targets.wheel]
packages = ["src/uetools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
